--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "start": "node index.js"
   },
   "author": "Damian Lion Maring",
   "licence": "GPL-3.0",
   "dependencies": {
     "express": "4.15.4",
+    "install": "0.10.1",
+    "npm": "5.4.2",
+    "rethinkdb": "2.3.3",
     "socket.io": "2.0.3"
   }
 }
