--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "licence": "GPL-3.0",
   "dependencies": {
     "body-parser": "1.18.2",
+    "cors": "2.8.4",
     "express": "4.15.4",
     "install": "0.10.1",
     "npm": "5.4.2",
