--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "start": "node index.js"
+    "start": "node ./src/index.js",
+    "nodemon": "node node_modules/nodemon/bin/nodemon.js ./src/index.js localhost 3000"
   },
   "author": "Damian Lion Maring",
   "licence": "GPL-3.0",
@@ -17,5 +18,8 @@
     "npm": "5.4.2",
     "rethinkdb": "2.3.3",
     "socket.io": "2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "1.12.1"
   }
 }
